lib/parsing/grammar


program        → declaration* EOF ;

declaration    → varDecl
               | statement ;

statement      → exprStmt
              | ifStmt
              | whileStmt
              | forStmt
              | printStmt
              | block ;

ifStmt         → "if" "(" expression ")" statement
              ( "else" statement )? ;

whileStmt      -> "while" "(" expression ")" statement

block          → "{" declaration* "}" ;

exprStmt       → expression ";" ;
printStmt      → "print" expression ";"

expression     → assignment ;
assignment     → IDENTIFIER "=" assignment
               | logic_or ;
logic_or       → logic_and ( "or" logic_and )* ;
logic_and      → equality ( "and" equality )* ;

equality       → comparison ( ( "!=" of ast * ast | "==" ) comparison )* ;
comparison     → term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term           → factor ( ( "-" | "+" ) factor )* ;
factor         → unary ( ( "/" | "*" ) unary )* ;
unary          → ( "!" | "-" ) unary| call ;
call           → primary ( "(" arguments? ")" )* ;
primary        → NUMBER | STRING | "true" | "false" | "nil"| "(" expression ")" ;

arguments      → expression ( "," expression )* ;
